--- a/documentation/daniel-jones-documentation.Rmd
+++ b/documentation/daniel-jones-documentation.Rmd
@@ -1,16 +1,24 @@
 ---
-title: 'Data Science Toolbox 3: Documentation'
+title: "Data Science Toolbox 3: Documentation"
 author: "Daniel Jones"
 output:
-  pdf_document: default
-  html_notebook: default
+  pdf_document:
+    toc: false
+    df_print: kable
+    latex_engine: xelatex
+geometry: margin=2cm
+documentclass: amsart
+monofont: "Source Code Pro"
 ---
 
 ```{r}
+knitr::opts_knit$set(root.dir='../')
+
 library(caret)
 library(data.table)
 library(ggplot2)
 library(ranger)
+library(knitr)
 
 set.seed(0xC0FFEE)
 ```
@@ -18,7 +26,7 @@ set.seed(0xC0FFEE)
 Load in the data set:
 ```{r}
 columns <- read.table(
-    "../data/kddcup.names",
+    "./data/kddcup.names",
     sep=":",
     skip=1,  # the first column name are the labels, but those are at the end!
     as.is=T
@@ -26,7 +34,7 @@ columns <- read.table(
 column_names <- c(columns[,1], 'label')
 
 connection_events <- read.csv(
-    "../data/kddcup.data_10_percent.gz",
+    "./data/kddcup.data_10_percent.gz",
     col.names=column_names
 )
 
@@ -90,12 +98,12 @@ summary(predictions$predictions)
 
 Make a confusion matrix to test it out:
 ```{r}
-table(testing_data$label, predictions$predictions)
+kable(table(testing_data$label, predictions$predictions))
 ```
 
 
 Repeat the above for all 10 folds:
-```{r}
+```{r eval=FALSE}
 confusion_matrices <-lapply(k_folds, function(fold) {  # approx. 10 minutes
     training_indices <- -fold
     testing_indices <- fold
@@ -120,19 +128,24 @@ confusion_matrices <-lapply(k_folds, function(fold) {  # approx. 10 minutes
 ```
 
 
-```{r}
+```{r eval=FALSE}
 summary_matrix = Reduce('+', confusion_matrices)
 summary_matrix
 ```
 
 To avoid re-running this everytime, save a copy of the results into a file:
-```{r}
-saveRDS(summary_matrix, file='../data/daniel-jones-random-forest-summary-matrix-some-features.rds')
+```{r eval=FALSE}
+saveRDS(
+  summary_matrix,
+  file='./data/daniel-jones-random-forest-summary-matrix-some-features.rds'
+)
 ```
 
 The load it with:
 ```{r}
-summary_matrix <- readRDS(file='../data/daniel-jones-random-forest-summary-matrix-some-features.rds')
+summary_matrix <- readRDS(
+  file='./data/daniel-jones-random-forest-summary-matrix-some-features.rds'
+)
 ```
 
 Plot (TODO: needs some tweaking):
@@ -148,7 +161,7 @@ ggplot(
 # Random Forest on all features
 
 Apply the random forest to all features:
-```{r}
+```{r eval=FALSE}
 confusion_matrices <-lapply(k_folds, function(fold) {  # approx. 25 minutes
     training_indices <- -fold
     testing_indices <- fold
@@ -172,19 +185,24 @@ confusion_matrices <-lapply(k_folds, function(fold) {  # approx. 25 minutes
 })
 ```
 
-```{r}
+```{r eval=FALSE}
 summary_matrix = Reduce('+', confusion_matrices)
 summary_matrix
 ```
 
 To avoid re-running this everytime, save a copy of the results into a file:
-```{r}
-saveRDS(summary_matrix, file='../data/daniel-jones-random-forest-summary-matrix-all-features.rds')
+```{r eval=FALSE}
+saveRDS(
+  summary_matrix,
+  file='./data/daniel-jones-random-forest-summary-matrix-all-features.rds'
+)
 ```
 
 The load it with:
 ```{r}
-summary_matrix <- readRDS(file='../data/daniel-jones-random-forest-summary-matrix-all-features.rds')
+summary_matrix <- readRDS(
+  file='./data/daniel-jones-random-forest-summary-matrix-all-features.rds'
+)
 ```
 
 Plot (TODO: needs some tweaking):
